--- a/3_deploy_eks_clutser/cluster.yaml
+++ b/3_deploy_eks_clutser/cluster.yaml
@@ -29,6 +29,8 @@ iam:
 addons:
   - name: vpc-cni
     version: latest
+    configurationValues: '{"env":{"ENABLE_PREFIX_DELEGATION":"true", "ENABLE_POD_ENI":"true", "POD_SECURITY_GROUP_ENFORCING_MODE":"standard"},"enableNetworkPolicy": "true", "nodeAgent": {"enablePolicyEventLogs": "true"}}'
+    resolveConflicts: overwrite
   - name: coredns
     version: latest
   - name: kube-proxy
