--- a/4_deploy_web_application/sample-application/ui/deployment.yaml
+++ b/4_deploy_web_application/sample-application/ui/deployment.yaml
@@ -60,7 +60,7 @@ spec:
             readOnlyRootFilesystem: true
             runAsNonRoot: true
             runAsUser: 1000
-          image: "retail-store-sample-ui"
+          image: "public.ecr.aws/aws-containers/retail-store-sample-ui:0.1.0"
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
