--- a/4_deploy_web_application/sample-application/checkout/deployment.yaml
+++ b/4_deploy_web_application/sample-application/checkout/deployment.yaml
@@ -55,7 +55,7 @@ spec:
             readOnlyRootFilesystem: true
             runAsNonRoot: true
             runAsUser: 1000
-          image: "retail-store-sample-checkout"
+          image: "public.ecr.aws/aws-containers/retail-store-sample-checkout:0.1.0"
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
